Week 08 images for the other two pages.

--- a/site-plan.html
+++ b/site-plan.html
@@ -133,26 +133,23 @@
         [Written copy for the home page here]
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/home.png" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        The blog
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/blog_image.png" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The shop
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/shop_image.png" alt="image for page3">
 
       </ul>
       <hr>
@@ -164,21 +161,24 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The home will only display some blog posts and focus more on the products.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home_wire.png" alt="home page wireframe">
+      <img src="images/phone home.png" alt="home page for phone wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Store and shop page</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The store page will by default show 6 feature items with a button that will load
+        the next 6 items.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/shop.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Blog</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        The blog page is the displays only the latest posts making the page look 
+        cleaner and easy to navigate. While keeping a clean look.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/blog.png" alt="page 3 wireframe">
     </main>
   </body>
 
