Week 11 Personal Home Site with CSS

--- a/store.html
+++ b/store.html
@@ -5,25 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div id="pagecontainer">
-            <header>
-                <div id="cart-icon">
-                    <a href="store.html" target="_blank">
-                        <img src="images/media icons/shop-cart" alt="Shopping Cart">
-                    </a>
+    <div id="homecontent">
+        <header>
+            <div id="tri-line" style="position: sticky; top: 0px;">
+                <div class="red-line">
+                    <a href="store.html"> Free shipping orders > $75 & 60 day returns </a>
                 </div>
-                <a id="logo_link" href="index.html">
-                    <img class="logo" src="images/b_letters_white.png" alt="Bones Logo"> 
+                <div class="white-line">
+                    <a>space</a>
+                </div>
+                <a class="logo_link" href="index.html">
+                    <img class="logo" src="images/black-letters.png" alt="Bones Logo"> 
                 </a>
                 <nav>
-                    <a href="index.html">Home</a>
-                    <a href="store.html">Products</a>
-                    <a href="index.html">Team Blog</a>
+                    <div class="nav-bar">
+                        <a href="index.html">Home</a>
+                        <a href="store.html">Products</a>
+                        <a href="blog.html">Team Blog</a>
+                    </div>
                 </nav>
-            </header>  
+            </div>
+        </header>   
         <main id="wrapper-main">
             <div class="banner-top" >
                 <div id="slider">
@@ -77,26 +82,36 @@
             </section>
         </main>
         <footer>
-            <a id="icon_link" href="index.html">
-                <img class="icon" src="images/b_icon.png" alt="Bones logo"> 
-            </a>
-            <h3><a href="contact_us.html">Contact Us</a></h3>
-            <h3><a href="store.html">Site Map</a></h3>
-            <h3>Accesibility</a></h3>
-            <h3>Jobs</h3>
-            <div class="social">
-                <a href="www.facebook.com" target="_blank">
-                    <img src="images/media icons/facebook.png" alt="Facebook Icon">
+            <div id="b-tri-line">  
+                <div class="red">
+                    <a> space</a>
+                </div>
+                <a id="icon_link" href="index.html">
+                    <img class="icon" src="images/b_icon.png" alt="Bones logo"> 
                 </a>
-                <a href="www.twitter.com" target="_blank">
-                    <img src="images/media icons/twitter.png" alt="Twitter Icon">
-                </a>
-                <a href="www.instagram.com" target="_blank">
-                    <img src="images/media icons/insta.png" alt="instagram Icon">
-                </a>
-                <a href="www.youtube.com" target="_blank">
-                    <img src="images/media icons/youtube.png" alt="youtube Icon">
-                </a>
+                <div id="footer-bar">
+                    <a href="contact_us.html">Contact Us</a>
+                    <a href="store.html">Site Map</a>
+                    <a>Accesibility</a>
+                    <a>Jobs</a>
+                </div>
+                <div class="social-box">
+                    <a href="www.facebook.com" target="_blank">
+                        <img src="images/media icons/resized/facebook.png" alt="Facebook Icon">
+                    </a>
+                    <a href="www.twitter.com" target="_blank">
+                        <img src="images/media icons/resized/twitter.png" alt="Twitter Icon">
+                    </a>
+                    <a href="www.instagram.com" target="_blank">
+                        <img src="images/media icons/resized/insta.png" alt="instagram Icon">
+                    </a>
+                    <a href="www.youtube.com" target="_blank">
+                        <img src="images/media icons/resized/youtube.png" alt="youtube Icon">
+                    </a>
+                </div>
+                <div class="black">
+                    <a> space </a>
+                </div>
             </div>
         </footer>
     </div>
