Week 11 Personal Home Site with HTML corrected

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
                 </div>
                 <div class="social-box">
                     <a href="www.facebook.com" target="_blank">
-                        <img src="images/media icons/resized/facebook.png" alt="Facebook Icon">
+                        <img src="images/media_icons/resized/facebook.png" alt="Facebook Icon">
                     </a>
                     <a href="www.twitter.com" target="_blank">
-                        <img src="images/media icons/resized/twitter.png" alt="Twitter Icon">
+                        <img src="images/media_icons/resized/twitter.png" alt="Twitter Icon">
                     </a>
                     <a href="www.instagram.com" target="_blank">
-                        <img src="images/media icons/resized/insta.png" alt="instagram Icon">
+                        <img src="images/media_icons/resized/insta.png" alt="instagram Icon">
                     </a>
                     <a href="www.youtube.com" target="_blank">
-                        <img src="images/media icons/resized/youtube.png" alt="youtube Icon">
+                        <img src="images/media_icons/resized/youtube.png" alt="youtube Icon">
                     </a>
                 </div>
                 <div class="black">
